tests/function_component_attr/autoprops-fail.stderr
error: function components can't accept a receiver
 --> tests/function_component_attr/autoprops-fail.rs:7:23
  |
7 | fn CantAcceptReceiver(&self, b: bool) -> Html {
  |                       ^^^^^

error: could not find #[function_component] attribute in function declaration (#[autoprops] must be placed *before* #[function_component])
  --> tests/function_component_attr/autoprops-fail.rs:14:1
   |
14 | fn not_a_function_component(b: bool) -> Html {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected a reference to a `Properties` type (try: `&bool`)
  --> tests/function_component_attr/autoprops-fail.rs:22:25
   |
22 | fn wrong_attrs_order(b: bool) -> Html {
   |                         ^^^^

error: expected identifier, found keyword `let`
  --> tests/function_component_attr/autoprops-fail.rs:29:22
   |
29 | #[function_component(let)]
   |                      ^^^

error: cannot use `_` as field name
  --> tests/function_component_attr/autoprops-fail.rs:64:21
   |
64 | fn InvalidFieldName(_: u32) -> Html {
   |                     ^

error[E0412]: cannot find type `CompPrivateTest` in this scope
  --> tests/function_component_attr/autoprops-fail.rs:86:22
   |
86 |     let _ = html! { <CompPrivateTest /> };
   |                      ^^^^^^^^^^^^^^^ not found in this scope
   |
note: struct `crate::private_module::CompPrivateTest` exists but is inaccessible
  --> tests/function_component_attr/autoprops-fail.rs:72:5
   |
72 |     #[::yew::function_component(CompPrivateTest)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not accessible
   = note: this error originates in the attribute macro `::yew::function_component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotClonable: ImplicitClone` is not satisfied
  --> tests/function_component_attr/autoprops-fail.rs:41:19
   |
39 | #[autoprops]
   | ------------ required by a bound introduced by this call
40 | #[function_component]
41 | fn TypeIsNotClone(stuff: NotClonable) -> Html {
   |                   ^^^^^ expected an implementor of trait `ImplicitClone`
   |
help: consider borrowing here
   |
41 | fn TypeIsNotClone(&stuff: NotClonable) -> Html {
   |                   +

error[E0369]: binary operation `==` cannot be applied to type `NotPartialEq`
  --> tests/function_component_attr/autoprops-fail.rs:55:30
   |
55 | fn TypeIsNotPartialEq(stuff: NotPartialEq) -> Html {
   |                              ^^^^^^^^^^^^
   |
note: an implementation of `PartialEq<_>` might be missing for `NotPartialEq`
  --> tests/function_component_attr/autoprops-fail.rs:49:1
   |
49 | struct NotPartialEq(u32);
   | ^^^^^^^^^^^^^^^^^^^ must implement `PartialEq<_>`
help: consider annotating `NotPartialEq` with `#[derive(PartialEq)]`
   |
49 | #[derive(PartialEq)]
   |
